@@ -1,0 +1,43 @@
+# -*- encoding:utf-8 -*-
+from __future__ import unicode_literals
+
+MESSAGES = {
+    "%d min remaining to read": "%d min ngelen për tu lexuar",
+    "(active)": "(aktiv)",
+    "Also available in:": "Gjithashtu e disponueshme në:",
+    "Archive": "Arkiva",
+    "Authors": "Autorë",
+    "Categories": "Kategori",
+    "Comments": "Komente",
+    "LANGUAGE": "Shqip",
+    "Languages:": "Gjuhë:",
+    "More posts about %s": "Më shumë postime rreth %s",
+    "Newer posts": "Postime më të reja",
+    "Next post": "Postimi i rradhës",
+    "No posts found.": "Nuk është gjetur asnjë post.",
+    "Nothing found.": "Nuk është gjetur asgjë.",
+    "Older posts": "Postime më të vjetra",
+    "Original site": "Faqja origjinale",
+    "Posted:": "Postuar:",
+    "Posts about %s": "Postime rreth %s",
+    "Posts by %s": "Postime nga %s",
+    "Posts for year %s": "Postime për vitin %s",
+    "Posts for {month} {day}, {year}": "Postime për {month} {day}, {year}",
+    "Posts for {month} {year}": "Postime për {month} {year}",
+    "Previous post": "Postim i kaluar",
+    "Publication date": "Data e publikimit",
+    "RSS feed": "Furnizim RSS",
+    "Read in English": "Lexo në Shqip",
+    "Read more": "Lexo më shumë",
+    "Skip to main content": "Shko tek përmbajtja kryesore",
+    "Source": "Burim",
+    "Subcategories:": "Nënkategori:",
+    "Tags and Categories": "Etiketa dhe Kategori",
+    "Tags": "Etiketa",
+    "Uncategorized": "E pa kategorizuar",
+    "Updates": "Përditësime",
+    "Write your page here.": "Shkruaj faqen tënde këtu.",
+    "Write your post here.": "Shkruaj postin tënd këtu.",
+    "old posts, page %d": "Postime të kaluara, faqe %d",
+    "page %d": "faqe %d",
+}
