@@ -138,6 +138,7 @@ LEGAL_VALUES = {
         'ru': 'Russian',
         'sk': 'Slovak',
         'sl': 'Slovene',
+        'sq': 'Albanian',
         'sr': 'Serbian (Cyrillic)',
         'sr_latin': 'Serbian (Latin)',
         'sv': 'Swedish',
@@ -183,6 +184,7 @@ LEGAL_VALUES = {
         "ru": "Russian",
         "sk": "Slovak",
         "sl": "Slovenian",
+        "sq": "Albanian",
         "sr": "Serbian",
         "sr_latin": "Serbian (Latin)",
         "sv": "Swedish",
@@ -274,6 +276,7 @@ LEGAL_VALUES = {
         ru='ru',
         sk='sk',
         sl='sl',
+        sq='sq',
         sr='sr-cyrl',
         sr_latin='sr',
         sv='sv',
