@@ -4,6 +4,7 @@ New in master
 Features
 --------
 
+* Added Albanian translation by Vango Stavro
 * Added ``post-(type)`` class to ``story.tmpl`` (uses the ``type``
   meta field, defaults to ``post-text`` — same behavior as posts)
 * Added ``compiled`` signal after post is compiled (Issue #2369)
